--- a/Virtual Keyboard/index.html
+++ b/Virtual Keyboard/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Virtual Keyboard</title>
 </head>
+
 <body>
- <script src="script.js"></script>  
+ <script type="module" src="script.js" ></script>  
 </body>
 </html>
